# naked-sqla

./: .envrc  .gitignore  README.md  deploy_docs.py  makefile  mkdocs.yml  pyproject.toml  tox.ini  versions.json
.github/workflows/: deploy-docs-on-demand.yml  main.yml  on-release-main.yml
0.0.1/: 404.html  index.html  sitemap.xml
0.0.1/api/async-session/: index.html
0.0.1/api/session/: index.html
0.0.1/api/view/: index.html
0.0.1/get-started/why/: index.html
0.0.1/search/: search_index.json
0.1.0/: index.html  objects.inv  sitemap.xml
0.1.0/api/session/: index.html
0.1.0/api/view/: index.html
0.1.0/get-started/migration/: index.html
0.1.0/get-started/why/: index.html
0.1.0/search/: search_index.json
benchmark/: prefill.py  select_100k_rows.py
docs/: index.md
docs/api/: async-session.md  session.md  view.md
docs/get-started/: migration.md  why.md
naked_sqla/: bulk_persistent.py  context.py  exception.py  loading.py  session.py  view.py
naked_sqla/om/: asession.py  bulk_persistent.py  context.py  loading.py  session.py
problems/: complicated_update.py  multi_select.py  views.py
problems_in_sqla/: complicated_update.py  pk_failed_in_view.py
tests/: test_complicated_update.py  test_different_entity.py  test_examples.py  test_view_failed.py
